# bevy_ort

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: bench.yml  test.yml
benches/: modnet.rs  yolo_v8.rs
src/: lib.rs
src/models/: flame.rs  lightglue.rs  mod.rs  modnet.rs  yolo_v8.rs
tools/: flame.rs  lightglue.rs  modnet.rs  yolo_v8.rs
