[package]
name = "bevy_ort"
description = "bevy ort (onnxruntime) plugin"
version = "0.7.2"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
keywords = [
  "bevy",
  "ort",
  "onnx",
  "onnxruntime",
]
homepage = "https://github.com/mosure/bevy_ort"
repository = "https://github.com/mosure/bevy_ort"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

default-run = "modnet"


[features]
default = [
  "modnet",
]

modnet = ["rayon"]
yolo_v8 = []


[dependencies]
bevy_args = "1.3"
image = "0.24"  # upgrade with bevy
ndarray = "0.15"
rayon = { version = "1.8", optional = true }
serde = "1.0.197"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }


[dependencies.bevy]
version = "0.13"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "bevy_winit",
  "multi-threaded",
  "png",
]


[dependencies.ort]
version = "2.0.0-rc.0"
default-features = false
features = [
  "cuda",
  "load-dynamic",
  "ndarray",
]


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3


[lib]
path = "src/lib.rs"


[[bin]]
name = "modnet"
path = "tools/modnet.rs"

[[bin]]
name = "yolo_v8"
path = "tools/yolo_v8.rs"
required-features = ["yolo_v8"]


[[bench]]
name = "modnet"
harness = false

[[bench]]
name = "yolo_v8"
harness = false
required-features = ["yolo_v8"]
