[package]
name = "bevy_ort"
description = "bevy ort (onnxruntime) plugin"
version = "0.11.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
keywords = [
  "bevy",
  "ort",
  "onnx",
  "onnxruntime",
]
homepage = "https://github.com/mosure/bevy_ort"
repository = "https://github.com/mosure/bevy_ort"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

default-run = "modnet"


[features]
default = [
  "flame",
  "lightglue",
  "modnet",
  "yolo_v8",
]

flame = []
lightglue = []
modnet = ["rayon"]
yolo_v8 = []


[dependencies]
bevy_args = "1.3"
image = "0.24"  # upgrade with bevy
ndarray = "0.15"
rayon = { version = "1.8", optional = true }
serde = "1.0.197"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }


[dependencies.bevy]
version = "0.13"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_ui",
  "bevy_winit",
  "multi-threaded",
  "png",
  "tonemapping_luts",
]


[dependencies.ort]
version = "2.0.0-rc.2"
default-features = false
features = [
  "cuda",
  "load-dynamic",
  "ndarray",
]


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3


[lib]
path = "src/lib.rs"


[[bin]]
name = "flame"
path = "tools/flame.rs"
required-features = ["flame"]

[[bin]]
name = "lightglue"
path = "tools/lightglue.rs"
required-features = ["lightglue"]

[[bin]]
name = "modnet"
path = "tools/modnet.rs"
required-features = ["modnet"]

[[bin]]
name = "yolo_v8"
path = "tools/yolo_v8.rs"
required-features = ["yolo_v8"]


[[bench]]
name = "lightglue"
path = "benches/lightglue.rs"
harness = false
required-features = ["lightglue"]

[[bench]]
name = "modnet"
path = "benches/modnet.rs"
harness = false
required-features = ["modnet"]

[[bench]]
name = "yolo_v8"
path = "benches/yolo_v8.rs"
harness = false
required-features = ["yolo_v8"]
